refactor: 3주차 미션#1 백화점 멤버쉽 추상화 클래스로 변경